--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,7 @@
 {
     "editor.formatOnSave": true,
-    "rust-analyzer.rustfmt.overrideCommand": ["rustfmt"]
+    "rust-analyzer.rustfmt.overrideCommand": [
+        "rustfmt"
+    ],
+    "rust-analyzer.checkOnSave.command": "clippy",
 }
